--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -1,4 +1,4 @@
-<svg width="480" height="133" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg width="480" height="173" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <foreignObject width="480" height="133">
         <div xmlns="http://www.w3.org/1999/xhtml" class="container">
             <style>
@@ -7,7 +7,7 @@
                 }
 
                 .main {
-                    /*margin-top: 40px;*/
+                    margin-top: 40px;
                     display: flex;
                 }
 
@@ -90,7 +90,7 @@
                 {{barCSS|safe}}
             </style>
 
-            <!-- <div class="currentStatus">{{status}}</div> -->
+            <div class="currentStatus">{{status}}</div>
 
             <div class="main">
                 <a class="art" href="{}" target="_BLANK">
@@ -100,8 +100,8 @@
                 </a>
 
                 <div class="content">
-                    <div class="song">{{songName}}</div>
-                    <div class="artist">{{artistName}}</div>
+                    <div class="song">Playing on Spotify: {{songName}}</div>
+                    <div class="artist">by {{artistName}}</div>
                     <div id="bars">{{contentBar|safe}}</div>
                 </div>
             </div>
