--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -90,7 +90,7 @@
                 {{barCSS|safe}}
             </style>
 
-            <div class="currentStatus">{{status}}</div>
+            /*<div class="currentStatus">{{status}}</div>*/
 
             <div class="main">
                 <a class="art" href="{}" target="_BLANK">
@@ -100,8 +100,8 @@
                 </a>
 
                 <div class="content">
-                    <div class="song">Playing on Spotify: {{songName}}</div>
-                    <div class="artist">by {{artistName}}</div>
+                    <div class="song">{{songName}}</div>
+                    <div class="artist">{{artistName}}</div>
                     <div id="bars">{{contentBar|safe}}</div>
                 </div>
             </div>
